<resources>
    <string name="app_name">ExamQuiz</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="createAcc">Create Account</string>
    <string name="anonymous">Anonymous Login</string>
    <string name="title_activity_anonymous">anonymousActivity</string>
    <string name="signout">Sign Out</string>
    <string name="accountType">Account Type</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="password1">Password:</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_teacher">TeacherActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="title_activity_course_student">CourseStudentActivity</string>
    <string name="title_activity_search_course">SearchCourseActivity</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
